--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -71,38 +71,28 @@ jobs:
             popd
 
       # Install yq & jq
-      - name: Install jq 1.6 and yq 3.4.3 (pinned)
+      - name: Install jq 1.6 and yq 3.3.4 (stable legacy version)
         run: |
             set -euxo pipefail
 
-            # --- jq 1.6 ---
-            # Get the official static binary from the jqlang release
             tmpdir="$(mktemp -d)"
+
+            # --- jq 1.6 ---
             curl -fsSL -o "$tmpdir/jq" \
             https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
             echo "Installing jq 1.6 to /usr/local/bin"
             sudo install -m 0755 "$tmpdir/jq" /usr/local/bin/jq
             jq --version  # expect: jq-1.6
 
-            # --- yq 3.4.3 ---
-            # Remove any conflicting yq (pip v3 wrapper or v4 binary) so we control the version
+            # --- yq 3.3.4 ---
             sudo pip3 uninstall -y yq || true
             sudo rm -f /usr/bin/yq /usr/local/bin/yq || true
 
-            # Download yq v3.4.3 (older release line). Some tags omit the 'v', try both.
-            YQ_URL_A="https://github.com/mikefarah/yq/releases/download/3.4.3/yq_linux_amd64"
-            YQ_URL_B="https://github.com/mikefarah/yq/releases/download/v3.4.3/yq_linux_amd64"
-
-            # Probe which URL exists, then download with curl to avoid wget exit 8 issues
-            if curl -fsSLI "$YQ_URL_A" >/dev/null 2>&1; then
-            curl -fsSL -o "$tmpdir/yq" "$YQ_URL_A"
-            else
-            curl -fsSL -o "$tmpdir/yq" "$YQ_URL_B"
-            fi
-
-            echo "Installing yq 3.4.3 to /usr/local/bin"
+            YQ_URL="https://github.com/mikefarah/yq/releases/download/3.3.4/yq_linux_amd64"
+            curl -fsSL -o "$tmpdir/yq" "$YQ_URL"
+            echo "Installing yq 3.3.4 to /usr/local/bin"
             sudo install -m 0755 "$tmpdir/yq" /usr/local/bin/yq
-            yq --version   # expect: yq 3.4.3
+            yq --version   # expect: yq version 3.3.4
 
             rm -rf "$tmpdir"
 
