--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -97,29 +97,23 @@ jobs:
     #         rm -rf "$tmpdir"
 
 
-      - name: Install jq 1.6 and yq v4.43.1
+      - name: Install jq 1.6 and yq 3.4.1 (legacy syntax support)
         run: |
-          set -euxo pipefail
+            set -euxo pipefail
+            tmpdir="$(mktemp -d)"
 
-          tmpdir="$(mktemp -d)"
+            # --- jq 1.6 ---
+            curl -fsSL -o "$tmpdir/jq" https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
+            sudo install -m 0755 "$tmpdir/jq" /usr/local/bin/jq
+            jq --version  # expect: jq-1.6
 
-          # --- jq 1.6 ---
-          curl -fsSL -o "$tmpdir/jq" \
-            https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
-          echo "Installing jq 1.6 to /usr/local/bin"
-          sudo install -m 0755 "$tmpdir/jq" /usr/local/bin/jq
-          jq --version  # expect: jq-1.6
+            # --- yq 3.4.1 ---
+            sudo rm -f /usr/local/bin/yq /usr/bin/yq || true
+            curl -fsSL -o "$tmpdir/yq" https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64
+            sudo install -m 0755 "$tmpdir/yq" /usr/local/bin/yq
+            yq --version  # expect: yq version 3.4.1
 
-          # --- yq v4.43.1 ---
-          sudo rm -f /usr/bin/yq /usr/local/bin/yq || true
-
-          YQ_URL="https://github.com/mikefarah/yq/releases/download/v4.43.1/yq_linux_amd64"
-          curl -fsSL -o "$tmpdir/yq" "$YQ_URL"
-          echo "Installing yq v4.43.1 to /usr/local/bin"
-          sudo install -m 0755 "$tmpdir/yq" /usr/local/bin/yq
-          yq --version   # expect: yq (https://github.com/mikefarah/yq/) version 4.43.1
-
-          rm -rf "$tmpdir"
+            rm -rf "$tmpdir"
 
       - name: Prepare /tmp run folder
         run: |
