update to fixing yq

--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -97,21 +97,26 @@ jobs:
     #         rm -rf "$tmpdir"
 
 
-      - name: Install jq 1.6 and yq 3.4.1 (legacy syntax support)
+      - name: Install jq 1.6 and yq v4 (compatible with your script)
         run: |
             set -euxo pipefail
             tmpdir="$(mktemp -d)"
 
-            # --- jq 1.6 ---
-            curl -fsSL -o "$tmpdir/jq" https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
+            # --- jq 1.6 (override Ubuntu's jq 1.7) ---
+            curl -fsSL -o "$tmpdir/jq" \
+            https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
             sudo install -m 0755 "$tmpdir/jq" /usr/local/bin/jq
-            jq --version  # expect: jq-1.6
+            jq --version   # -> jq-1.6
 
-            # --- yq 3.4.1 ---
+            # --- yq v4.x (Mike Farah) ---
+            # remove any older yq (v3) so the right one is used
             sudo rm -f /usr/local/bin/yq /usr/bin/yq || true
-            curl -fsSL -o "$tmpdir/yq" https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64
+
+            YQ_VERSION="v4.44.3"   # pick a specific v4 version
+            curl -fsSL -o "$tmpdir/yq" \
+            "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
             sudo install -m 0755 "$tmpdir/yq" /usr/local/bin/yq
-            yq --version  # expect: yq version 3.4.1
+            yq --version   # -> yq 4.44.3 (or your chosen v4)
 
             rm -rf "$tmpdir"
 
