--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -156,17 +156,16 @@ jobs:
             bats  ./tests/aggkit/e2e-pp.bats || exit 1
             bats  ./tests/aggkit/bridge-sovereign-chain-e2e.bats || exit 1
 
-            bats ./tests/aggkit/bridge-e2e-nightly.bats \
-                  ./tests/aggkit/internal-claims.bats \
-                  ./tests/aggkit/claim-reetrancy.bats \
-                  || exit 1
+            bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
+            bats ./tests/aggkit/internal-claims.bats || exit 1
+            bats ./tests/aggkit/claim-reetrancy.bats || exit 1
           else
             bats ./tests/aggkit/bridge-e2e.bats || exit 1
             bats ./tests/aggkit/e2e-pp.bats || exit 1
 
-            bats ./tests/aggkit/bridge-e2e-nightly.bats \
-                 ./tests/aggkit/internal-claims.bats \
-                 ./tests/aggkit/claim-reetrancy.bats \
+            bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
+            bats ./tests/aggkit/internal-claims.bats || exit 1
+            bats ./tests/aggkit/claim-reetrancy.bats || exit 1
                  || exit 1
           fi
           popd
