execute only Test triple claim internal calls -> 1 success, 1 fail and 1 success

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -160,7 +160,7 @@ jobs:
             # bats ./tests/aggkit/bridge-e2e.bats || exit 1
             # bats ./tests/aggkit/e2e-pp.bats || exit 1
             # bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
-            bats ./tests/aggkit/internal-claims.bats || exit 1
+            bats -f "Test triple claim internal calls -> 1 success, 1 fail and 1 success" ./tests/aggkit/internal-claims.bats || exit 1
             # bats ./tests/aggkit/claim-reetrancy.bats || exit 1
           fi
           popd
