revert schedule trigger for nightly tests

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -149,19 +149,27 @@ jobs:
           elif [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-succinct-aggoracle-committee" ]]; then
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
-            # bats ./tests/aggkit/bridge-e2e.bats || exit 1
-            # bats ./tests/op/optimistic-mode.bats || exit 1
-            # bats ./tests/aggkit/e2e-pp.bats || exit 1
-            # bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats || exit 1
-            # bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
-            bats ./tests/aggkit/internal-claims.bats || exit 1
-            # bats ./tests/aggkit/claim-reetrancy.bats || exit 1
+            bats  ./tests/aggkit/bridge-e2e.bats || exit 1
+            bats  ./tests/op/optimistic-mode.bats || exit 1
+            bats  ./tests/aggkit/e2e-pp.bats || exit 1
+            bats  ./tests/aggkit/bridge-sovereign-chain-e2e.bats || exit 1
+
+            if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
+              bats ./tests/aggkit/bridge-e2e-nightly.bats \
+                   ./tests/aggkit/internal-claims.bats \
+                   ./tests/aggkit/claim-reetrancy.bats \
+                   || exit 1
+            fi
           else
-            # bats ./tests/aggkit/bridge-e2e.bats || exit 1
-            # bats ./tests/aggkit/e2e-pp.bats || exit 1
-            # bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
-            bats ./tests/aggkit/internal-claims.bats || exit 1
-            # bats ./tests/aggkit/claim-reetrancy.bats || exit 1
+            bats ./tests/aggkit/bridge-e2e.bats || exit 1
+            bats ./tests/aggkit/e2e-pp.bats || exit 1
+
+            if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
+              bats ./tests/aggkit/bridge-e2e-nightly.bats \
+                   ./tests/aggkit/internal-claims.bats \
+                   ./tests/aggkit/claim-reetrancy.bats \
+                   || exit 1
+            fi
           fi
           popd
 
