--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -145,11 +145,9 @@ jobs:
           if [[ "${{ inputs.test-name }}" == "test-single-l2-network-fork12-global-index-pp-old-contracts" ]]; then
             chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
-            bats ./tests/aggkit/global-index-pp-old-contracts.bats \
-                 || exit 1
+            bats ./tests/aggkit/global-index-pp-old-contracts.bats || exit 1
           elif [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-succinct-aggoracle-committee" ]]; then
-            bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats \
-                 || exit 1
+            bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
             bats  ./tests/aggkit/bridge-e2e.bats || exit 1
             bats  ./tests/op/optimistic-mode.bats || exit 1
@@ -165,7 +163,7 @@ jobs:
           else
             bats ./tests/aggkit/bridge-e2e.bats || exit 1
             bats ./tests/aggkit/e2e-pp.bats || exit 1
-                 
+
             if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
               bats ./tests/aggkit/bridge-e2e-nightly.bats \
                    ./tests/aggkit/internal-claims.bats \
