--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -153,6 +153,7 @@ jobs:
             bats ./tests/op/optimistic-mode.bats || exit 1
             bats ./tests/aggkit/e2e-pp.bats || exit 1
             bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats || exit 1
+            bats ./tests/aggkit/aggsender-committee-updates.bats || exit 1
 
             if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
               bats ./tests/aggkit/bridge-e2e-nightly.bats \
@@ -163,6 +164,7 @@ jobs:
           else
             bats ./tests/aggkit/bridge-e2e.bats || exit 1
             bats ./tests/aggkit/e2e-pp.bats || exit 1
+            bats ./tests/aggkit/aggsender-committee-updates.bats || exit 1
 
             if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
               bats ./tests/aggkit/bridge-e2e-nightly.bats \
