--- a/tests/lxly/networks/bali-networks.env
+++ b/tests/lxly/networks/bali-networks.env
@@ -1,13 +1,15 @@
 LOG_ROOT_DIR="/tmp"
 ETH_RPC_TIMEOUT=14400
-RUN_WITH_KURTOSIS_ENV=false
+# Possible values: bali, cardona
+NETWORK_ENVIRONMENT=bali
 
 # L1 Network (Sepolia)
 SEPOLIA_RPC_URL="<REDACTED>"
 SEPOLIA_PRIVATE_KEY="<REDACTED>"
 SEPOLIA_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
 
-# BALI-01
+# BALI Networks
+# BALI-1
 BALI_NETWORK_1_RPC_URL="<REDACTED>"
 BALI_NETWORK_1_PRIVATE_KEY="<REDACTED>"
 BALI_NETWORK_1_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
