!feat: remove caronda50
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -89,7 +89,7 @@ jobs:
       # Cardona-specific RPC endpoints from secrets
       # CARDONA_01_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_01_RPC_ENDPOINT }}
       # CARDONA_48_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_48_RPC_ENDPOINT }}
-      CARDONA_50_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_50_RPC_ENDPOINT }}
+      # CARDONA_50_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_50_RPC_ENDPOINT }}
       CARDONA_51_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_51_RPC_ENDPOINT }}
       CARDONA_52_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_52_RPC_ENDPOINT }}
     steps:
@@ -194,9 +194,9 @@ jobs:
             # cast chain-id --rpc-url ${{ secrets.L2_CARDONA_48_RPC_ENDPOINT }}
             # echo "Cardona-48 chain ID validation passed"
 
-            echo "Validating Cardona-50 endpoint..."
-            cast chain-id --rpc-url ${{ secrets.L2_CARDONA_50_RPC_ENDPOINT }}
-            echo "Cardona-50 chain ID validation passed"
+            # echo "Validating Cardona-50 endpoint..."
+            # cast chain-id --rpc-url ${{ secrets.L2_CARDONA_50_RPC_ENDPOINT }}
+            # echo "Cardona-50 chain ID validation passed"
 
             echo "Validating Cardona-51 endpoint..."
             cast chain-id --rpc-url ${{ secrets.L2_CARDONA_51_RPC_ENDPOINT }}
@@ -307,8 +307,8 @@ jobs:
             # export CARDONA_NETWORK_48_RPC_URL="${{ env.CARDONA_48_RPC_ENDPOINT }}"
             # export CARDONA_NETWORK_48_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
-            export CARDONA_NETWORK_50_RPC_URL="${{ env.CARDONA_50_RPC_ENDPOINT }}"
-            export CARDONA_NETWORK_50_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
+            # export CARDONA_NETWORK_50_RPC_URL="${{ env.CARDONA_50_RPC_ENDPOINT }}"
+            # export CARDONA_NETWORK_50_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
             export CARDONA_NETWORK_51_RPC_URL="${{ env.CARDONA_51_RPC_ENDPOINT }}"
             export CARDONA_NETWORK_51_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
@@ -326,9 +326,9 @@ jobs:
             # echo "Cardona-48 Bridge Address: $CARDONA_NETWORK_48_BRIDGE_ADDR"
             # echo "Cardona-48 Bridge Service: $CARDONA_NETWORK_48_BRIDGE_SERVICE_URL"
 
-            echo "Cardona-50 RPC URL: ${CARDONA_NETWORK_50_RPC_URL:0:20}..."
-            echo "Cardona-50 Bridge Address: $CARDONA_NETWORK_50_BRIDGE_ADDR"
-            echo "Cardona-50 Bridge Service: $CARDONA_NETWORK_50_BRIDGE_SERVICE_URL"
+            # echo "Cardona-50 RPC URL: ${CARDONA_NETWORK_50_RPC_URL:0:20}..."
+            # echo "Cardona-50 Bridge Address: $CARDONA_NETWORK_50_BRIDGE_ADDR"
+            # echo "Cardona-50 Bridge Service: $CARDONA_NETWORK_50_BRIDGE_SERVICE_URL"
 
             echo "Cardona-51 RPC URL: ${CARDONA_NETWORK_51_RPC_URL:0:20}..."
             echo "Cardona-51 Bridge Address: $CARDONA_NETWORK_51_BRIDGE_ADDR"
