fix review comments

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -152,10 +152,9 @@ jobs:
             if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
               bats ./tests/aggkit/aggsender-committee-updates.bats || exit 1
               bats ./tests/op/optimistic-mode.bats || exit 1
-              bats ./tests/aggkit/bridge-e2e-nightly.bats \
-                   ./tests/aggkit/internal-claims.bats \
-                   ./tests/aggkit/claim-reetrancy.bats \
-                   || exit 1
+              bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
+              bats ./tests/aggkit/internal-claims.bats || exit 1
+              bats ./tests/aggkit/claim-reetrancy.bats || exit 1
             fi
           else
             bats ./tests/aggkit/bridge-e2e.bats || exit 1
