--- a/scenarios/zkevm_to_pp/configs/agglayer-prover.toml
+++ b/scenarios/zkevm_to_pp/configs/agglayer-prover.toml
@@ -14,5 +14,14 @@ prometheus-addr = "0.0.0.0:9093"
 [primary-prover.network-prover]
 proving-timeout = 900
 
+[rpc]
+max-request-body-size = 4294967295
+
 [grpc]
-max-decoding-message-size = 104857600
+max-decoding-message-size = 10485760000
+max-encoding-message-size = 10485760000
+
+[prover.grpc]
+max-decoding-message-size = 10485760000
+max-encoding-message-size = 10485760000
+
