execute only Test invalid GER on L2 (bridges are valid)

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -146,16 +146,7 @@ jobs:
           if [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-succinct-aggoracle-committee" ]]; then
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats || exit 1
           else
-            bats ./tests/aggkit/bridge-e2e.bats || exit 1
-            bats ./tests/aggkit/e2e-pp.bats || exit 1
-            bats ./tests/aggkit/aggsender-committee-updates.bats || exit 1
-            if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
-              bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats || exit 1
-              bats ./tests/op/optimistic-mode.bats || exit 1
-              bats ./tests/aggkit/bridge-e2e-nightly.bats || exit 1
-              bats ./tests/aggkit/internal-claims.bats || exit 1
-              bats ./tests/aggkit/claim-reetrancy.bats || exit 1
-            fi
+            bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats -f "Test invalid GER on L2 (bridges are valid)" || exit 1
           fi
           popd
 
