execute both invalid GER and aggsender committee update tests

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -147,6 +147,7 @@ jobs:
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats || exit 1
           else
             bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats -f "Test invalid GER on L2 (bridges are valid)" || exit 1
+            bats ./tests/aggkit/aggsender-committee-updates.bats || exit 1
           fi
           popd
 
