execute all e2e tests

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -146,7 +146,14 @@ jobs:
           if [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-succinct-aggoracle-committee" ]]; then
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats || exit 1
           else
-            bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats -f "Test inject invalid GER on L2 \(bridges are valid\)" || exit 1
+            bats ./tests/aggkit/bridge-e2e.bats
+            bats ./tests/aggkit/e2e-pp.bats
+            bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats
+            bats ./tests/op/optimistic-mode.bats
+            bats ./tests/aggkit/bridge-e2e-nightly.bats
+            bats ./tests/aggkit/internal-claims.bats
+            bats ./tests/aggkit/claim-reetrancy.bats
+            bats ./tests/aggkit/aggsender-committee-updates.bats
           fi
           popd
 
