--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ stress_logs_*
 chaos_logs_*
 *.out
 .idea
+*.env
+aggsender_find_imported_bridge
+combined.json
+combined-001.json
+combined-002.json
+combined-003.json
