--- a/scenarios/agglayer-upgrade-with-supplied-version/assets/opgeth-ecdsa.yml
+++ b/scenarios/agglayer-upgrade-with-supplied-version/assets/opgeth-ecdsa.yml
@@ -17,7 +17,7 @@ args:
   zkevm_rollup_chain_id: 2151909
   deployment_suffix: "-002"
   zkevm_rollup_id: 2
-  # OP Networks rely on L1 blocks to have finalization on L2. This means if the L1 blocktime is very fast, OP Succinct proof requests will have to bundle many L1 blocks into a single proof.
+  # OP Networks rely on L1 blocks to have finalisation on L2. This means if the L1 blocktime is very fast, OP Succinct proof requests will have to bundle many L1 blocks into a single proof.
   # This will significantly increase cycles even if the L2 network is empty. Instead of having 2s, for OP Succinct deployments, we recommend 12s.
   # Note this will noticeably increase the deployment time because of the increased L1 finality.
   l1_seconds_per_slot: 2 # TEMPORARY - DO NOT MERGE
